Create curriculum Joao Neres

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Currículos 5 SI</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <div class="container">
@@ -16,9 +18,11 @@
         <h3>Currículos Disponíveis</h3>
         <ul>
             <li><a href="jorge.html">Prof. Jorge</a></li>
+            <li><a href="./curriculo_jvNeres/curriculo.html">João Victor Neres</a></li>
         </ul>
     </div>
 
 
 </body>
+
 </html>
