--- a/curriculo_jvNeres/curriculo.html
+++ b/curriculo_jvNeres/curriculo.html
@@ -122,6 +122,15 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-sm-12 col-lg-5 mt-3 mb-3">
+                        <div class="d-flex">
+                            <a href="../index.html" class="text-light display-6 fs-4 ms-3 mb-0 text-decoration-none">
+                                Voltar ao Início
+                            </a>
+                        </div>
+                    </div>
+                </div>
                 <!-- end contacts -->
             </div>
         </header>
