Curriculo Saitama OK!

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h3>Currículos Disponíveis</h3>
         <ul>
             <li><a href="jorge.html">Prof. Jorge</a></li>
+            <li><a href="saitama.html">Saitama: o brabo!</a></li>
         </ul>
     </div>
 
